# kimchi-ai-app-server

./: .gitignore  pyproject.toml  readme.md
app/: main.py
