[tool.poetry]
name = "kimchi-ai-app-server"
version = "0.1.0"
description = "kimchi ai app eureka client"
authors = ["창민 <ckd29672@naver.com>"]
readme = "README.md"
packages = [{include = "kimchi_ai_app_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
py-eureka-client = "^0.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
